@@ -19,16 +19,17 @@ package net.kodehawa.mantarobot.utils.data;
 
 import java.io.IOException;
 import java.nio.charset.Charset;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 
 public class FileIOUtils {
-    private static final Charset UTF8 = Charset.forName("UTF-8");
-
+    private static final Charset UTF8 = StandardCharsets.UTF_8;
+    
     public static String read(Path path) throws IOException {
-        return new String(Files.readAllBytes(path), UTF8);
+        return Files.readString(path, UTF8);
     }
-
+    
     public static void write(Path path, String contents) throws IOException {
         Files.write(path, contents.getBytes(UTF8));
     }
